Aggiunto pacchetti per pam

--- a/node/overlay/etc/alternatives/message_center.html
+++ b/node/overlay/etc/alternatives/message_center.html
@@ -1,1 +1,1 @@
-/usr/share/lightdm-webkit/themes/univr-theme/message_center.html.nfs.default
+../../usr/share/web-greeter/themes/univr-theme/message_center.html.nfs.default
