Corretto bug su webgreeter e modifiche a gestione macchina virtuale

--- a/node/overlay/usr/share/web-greeter/themes/univr/index.html
+++ b/node/overlay/usr/share/web-greeter/themes/univr/index.html
@@ -82,5 +82,6 @@
 <script src="js/theme.js"></script>
 <script src="js/clock.js"></script>
 <script src="js1/index.js" type="module"></script>
+<script src="js1/sessions.js" type="module"></script>
 </body>
 </html>
