Aumentato margine sx selettori sessione

--- a/node/overlay/usr/share/web-greeter/themes/univr/index.html
+++ b/node/overlay/usr/share/web-greeter/themes/univr/index.html
@@ -42,7 +42,7 @@
                 <div style="text-align:center; width=100%"><img id="connecting" src="img/connecting.gif" /></div>
 
                 <br />
-                <div class="form-group" id="session"> </div>
+                <div class="form-group" style="margin-left:20px" id="session"> </div>
                 <!--<div style="text-align:center">
                     <button class="btn" id="ospite" type="submit" title="Accedi come utente ospite">Ospite</button>
                 </div>-->
