Visualizza versione nella login page

--- a/node/overlay/usr/share/web-greeter/themes/univr/message_top.html
+++ b/node/overlay/usr/share/web-greeter/themes/univr/message_top.html
@@ -24,11 +24,12 @@
 
   <h2 class="colort">AULA: <script>document.write(env.PROFILE)</script></h2>
   <h2 class="colort">IP: <script>document.write(env.IPNAME)</script></h2>
+  <h3 class="colort">VERSIONE: <script>document.write(env.VERSION)</script></h3>
   <h3 class="colorh">Modalità di accesso</h3>
   <p class="color">Utilizzare le credenziali GIA</p>
-  <h3 class="colorh">Sessioni disponibili</h3>
+  <!--h3 class="colorh">Sessioni disponibili</h3>
   <ul class="color">
     <li>Ubuntu
     <li>Windows (ambiente virtualizzato)
-  </ul>
+  </ul-->
 </div>
